# react-native-polkadot-wasm

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  WasmCryptoTest.podspec  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/wasmcryptotest/: WasmCryptoTestModule.kt  WasmCryptoTestPackage.kt
cpp/: react-native-wasm-crypto-test.cpp  react-native-wasm-crypto-test.h
example/: README.md  app.json  index.js  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/WasmCryptoTestExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/WasmCryptoTestExample.xcodeproj/: project.pbxproj
example/ios/WasmCryptoTestExample.xcodeproj/xcshareddata/xcschemes/: WasmCryptoTestExample.xcscheme
example/ios/WasmCryptoTestExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: WasmCryptoTest.h  WasmCryptoTest.mm
rust_modules/uniffi-starter/.cargo/: config.toml
rust_modules/uniffi-starter/rust/foobar/: Cargo.toml
rust_modules/uniffi-starter/rust/foobar/src/: bip39.rs  ed25519.rs  hashing.rs  lib.rs  secp256k1.rs  sr25519.rs  vrf.rs
src/: NativeWasmCryptoTest.ts  bundle.ts  index.tsx
(+2 files in other folders)
